fix changing page

--- a/source/src/menu/DesktopMenu.scss
+++ b/source/src/menu/DesktopMenu.scss
@@ -14,11 +14,10 @@
     top: 58px;
 
     div {
-      height: 46px;
-
       a {
         font-size: 15px;
-        padding: 10px;
+        line-height: 20px;
+        width: 100px;
       }
     }
     div:hover {
