--- a/source/src/App.css
+++ b/source/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  padding-top: 100px;
   padding-bottom: 100px;
 }
 
@@ -33,4 +32,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 40px 20px 20px 20px;
 }
