--- a/source/src/menu/DesktopMenu.scss
+++ b/source/src/menu/DesktopMenu.scss
@@ -1,50 +1,56 @@
 .desktop-menu {
-  background-color: #273339;
-  position: fixed; /* Make it stick/fixed */
-  top: 0; /* Stay on top */
-  width: 100%; /* Full width */
-  transition: top 0.3s; /* Transition effect when sliding down (and up) */
-  padding-left: 50px;
-  z-index: 999;
-
-  .sub-menu {
-    position: absolute;
-    display: none;
-    background-color: #273339;
-    top: 58px;
-
-    div {
-      a {
-        font-size: 15px;
-        line-height: 20px;
-        width: 100px;
-      }
-    }
-    div:hover {
-      background-color: #aeaeae;
-      cursor: pointer;
-
-      a {
-        color: #273339;
-        background-color: #aeaeae;
-      }
-    }
+  /* The side navigation menu */
+  .sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #242424;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    white-space: nowrap;
+    text-align: center;
   }
 
-  a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 15px;
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 6px 0;
     text-decoration: none;
-    font-weight: bold;
     font-size: 20px;
+    color: #aeaeae;
+    display: block;
+    transition: 0.3s;
+  }
+
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
     cursor: pointer;
   }
 
-  a:hover {
-    background-color: #F8F8F8;
-    color: #273339;
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  .show-nav {
+    font-size:30px;
+    cursor:pointer;
+    float: left;
+    padding-left: 50px;
+    padding-top: 10px;
   }
 }
